apps/science/sky-explorer/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sky-explorer
  namespace: science
  labels:
    app: sky-explorer
  annotations:
    argocd.argoproj.io/sync-wave: '3'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sky-explorer
  template:
    metadata:
      labels:
        app: sky-explorer
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: sky-explorer
          image: ghcr.io/mithr4ndir/sky-explorer:latest
          ports:
            - name: http
              containerPort: 8050
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: 2Gi
            limits:
              cpu: "2"
              memory: 4Gi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
