apps/science/sky-explorer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sky-explorer
  namespace: science
  labels:
    app: sky-explorer
  annotations:
    argocd.argoproj.io/sync-wave: '3'
spec:
  type: ClusterIP
  selector:
    app: sky-explorer
  ports:
    - name: http
      port: 8050
      targetPort: http
      protocol: TCP
